--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <center><h1>Alau World!</h1></center>
-<p><img width=704 height=563 src="/image002.jpg"></p>
+<p><img width=704 height=563 src="image002.jpg"></p>
