--- a/index.html
+++ b/index.html
@@ -1,2 +1,17 @@
-<center><h1>Alau World!</h1></center>
-<p><img width=704 height=563 src="image002.jpg"></p>
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>Alau Goal all for football</title>
+   </head>
+  
+   <body>
+   <center>
+      <h1>Alau World!</h1>
+      <p><img width=704 height=563 src="image002.jpg"></p>
+      <br><br>
+      <a href="https://alaugoal.wordpress.com/soccer/">
+        <img alt="Click here to continue" src="image003.png" width=57 height=21>
+      </a>
+   </center>
+   </body>
+</html>
