--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h1>Alau World!</h1>
       <p><img width=704 height=563 src="image002.jpg"></p>
       <br><br>
-      <a href="/soccer.html">
+      <a href="/alau/soccer.html">
         <img alt="Click here to continue" src="image003.png" width=570 height=210>
       </a>
    </center>
