--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <a href="/alau/soccer.html">
         <img alt="Click here to continue" src="image003.png" width=570 height=210>
       </a>
+      <br><br>
+      <a href="/alaugoal/alaugoal.html">Click here for Alau Goal</a>
    </center>
    </body>
 </html>
