--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img alt="Click here to continue" src="image003.png" width=570 height=210>
       </a>
       <br><br>
-      <a href="/alaugoal/alaugoal.html">Click here for Alau Goal</a>
+      <a href="/alau/alaugoal.html">Click here for Alau Goal</a>
       <br><br><br>
       ______
    </center>
