--- a/alaugoal.html
+++ b/alaugoal.html
@@ -1,3 +1,6 @@
 <center>
   <h1>Alau Goal</h1>
+  <br><br>
+  <a href="mailto:test@example.com">Click here to send us a message!</a>
+  <br><br>
 </center>
