--- a/soccer.html
+++ b/soccer.html
@@ -1,7 +1,32 @@
+<!DOCTYPE html>
+<html>
 <head>
   <script src="https://cdn.optimizely.com/js/22014770818.js"></script>
+  <style>
+body {
+  background-color: lightblue;
+}
+
+h1 {
+  color: darkgreen;
+  margin-left: 40px;
+}
+button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+  </style>
 </head>
-<h1>Soccer</h1>
+<body>
+
+<h1>Let's play soccer!</h1>
+
 <br>
 <p>
   Association football, more commonly known as simply football or soccer,[a] is a team sport played between two teams of 11 players who primarily use their feet to propel the ball around a rectangular field called a pitch. The objective of the game is to score more goals than the opposition by moving the ball beyond the goal line into the opposing side's rectangular framed goal. Traditionally the game has been played over two 45 minute halves, for a total match time of 90 minutes. With an estimated 250 million players active in over 200 countries it is considered the world's most popular sport.
@@ -17,4 +42,7 @@ The two most prestigious competitions in European club football are the UEFA Cha
 
 <br>
 
-Click here to start play!
+<button type="button"><a href="alau/play.html">Click here to to start playing!</a></button>
+ 
+</body>
+</html>
