--- a/soccer.html
+++ b/soccer.html
@@ -42,7 +42,7 @@ The two most prestigious competitions in European club football are the UEFA Cha
 
 <br>
 
-<button type="button"><a href="/play.html">Click here to to start playing!</a></button>
+<button type="button"><a href="https://edalau.github.io/alau/play.html">Click here to to start playing!</a></button>
  
 </body>
 </html>
