--- a/soccer.html
+++ b/soccer.html
@@ -25,8 +25,10 @@ button {
 </head>
 <body>
 
-<h1>Let's play soccer!</h1>
+<div align="center"><h1>Let's play soccer!</h1></div>
 
+<div align="right"><button type="button"><a href="alau/donate.html">Donate</a></button></div>
+  
 <br>
 <p>
   Association football, more commonly known as simply football or soccer,[a] is a team sport played between two teams of 11 players who primarily use their feet to propel the ball around a rectangular field called a pitch. The objective of the game is to score more goals than the opposition by moving the ball beyond the goal line into the opposing side's rectangular framed goal. Traditionally the game has been played over two 45 minute halves, for a total match time of 90 minutes. With an estimated 250 million players active in over 200 countries it is considered the world's most popular sport.
