--- a/soccer.html
+++ b/soccer.html
@@ -27,7 +27,7 @@ button {
 
 <div align="center"><h1>Let's play soccer!</h1></div>
 
-<div align="right"><button type="button"><a href="https://edalau.github.io/alau/donate.html">Donate</a></button></div>
+<div align="right"><a href="https://edalau.github.io/alau/donate.html"><img alt="Click here to donate" src="donate button red.jpg" width=100 height=100></a></div>
   
 <br>
 <p>
