--- a/alaugoal.html
+++ b/alaugoal.html
@@ -1,5 +1,8 @@
 <center>
   <h1>Alau Goal</h1>
+  
+  <div align="right"><a href="https://edalau.github.io/alau/donate.html"><img alt="Click here to donate" src="donate button red.jpg" width=100 height=100></a></div>
+  
   <br><br>
   <a href="mailto:test@example.com">Click here to send us a message!</a>
   <br><br>
