--- a/play.html
+++ b/play.html
@@ -2,4 +2,7 @@
   <script src="https://cdn.optimizely.com/js/22014770818.js"></script>
 </head>
 <h1>How to play</h1>
+
+<div align="right"><a href="https://edalau.github.io/alau/donate.html"><img alt="Click here to donate" src="donate button red.jpg" width=100 height=100></a></div>
+
 <br>
