--- a/play.html
+++ b/play.html
@@ -3,6 +3,6 @@
 </head>
 <h1>How to play</h1>
 
-<div align="right"><a href="https://edalau.github.io/alau/donate.html"><img alt="Click here to donate" src="donate button red.jpg" width=100 height=100></a></div>
+<div align="right"><a href="https://edalau.github.io/alau/donate.html"><img alt="Click here to donate" src="donate_red.jpg" width=100 height=100></a></div>
 
 <br>
