--- a/alaugoal.html
+++ b/alaugoal.html
@@ -1,12 +1,36 @@
 <head>
   <script src="https://cdn.optimizely.com/js/22014770818.js"></script>
+  
+  <style>
+body {
+  background-color: lightblue;
+}
+#donate1{
+color: yellow;
+}
+h1 {
+  color: darkgreen;
+  margin-left: 40px;
+}
+button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+  </style>
 </head>
 
 <center>
   <h1>Alau Goal</h1>
   
-  <div align="right"><a href="https://edalau.github.io/alau/donate.html"><img alt="Click here to donate" src="donate_red.jpg" width=100 height=100></a></div>
-  
+  <p id="donate1" align="right">Alau</p>
+<a id="donate2" href="https://edalau.github.io/alau/donate.html"><img alt="Click here to donate" src="donate_red.jpg" width=100 height=100></a></div>
+
   <br><br>
   <a href="mailto:test@example.com">Click here to send us a message!</a>
   <br><br>
