--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Alau Goal all for football</title>
+      <title>Welcome to Alau Goal all for football</title>
       <script src="https://cdn.optimizely.com/js/22014770818.js"></script>
       <style>
       
